workload/network-policies/0-deny-neg.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: neg-deny-all
spec:
  podSelector:
    matchLabels:
      run: neg-demo-app
  ingress: []
