workload/network-policies/1-allow-default-external.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-external
spec:
  podSelector: {}
  ingress:
  - from:
    - ipBlock: 
        cidr: 130.211.0.0/22 # GCLB L7 range 1
  - from:
    - ipBlock:
        cidr: 35.191.0.0/16 # GCLB L7 range 2
