workload/network-policies/1-allow-neg-external.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: neg-allow-external
spec:
  podSelector:
    matchLabels:
      run: neg-demo-app
  ingress:
  - from:
    - ipBlock: 
        cidr: 130.211.0.0/22 # GCLB L7 range 1
  - from:
    - ipBlock:
        cidr: 35.191.0.0/16 # GCLB L7 range 2
